--- a/document/source/body.tex
+++ b/document/source/body.tex
@@ -128,7 +128,7 @@ The evaluation of assertions requires an environment to generate vehicle data, a
 
 \begin{figure}[!ht]
     \centering
-    \includegraphics[width=0.98\linewidth]{../other/figures/SimulatorAssertionsCondensed.jpg}
+    \includegraphics[width=0.98\linewidth]{\pathToOtherFiles/figures/SimulatorAssertionsCondensed.jpg}
     \caption{Architecture for interpreting and monitoring assertions.}
     \label{fig:SimulatorArchitecture}
 \end{figure}
@@ -136,9 +136,7 @@ The evaluation of assertions requires an environment to generate vehicle data, a
 
 
 % GC added this as condensetion of section III **************
-Figure~\ref{fig:SimulatorArchitecture} shows the testbench achitecture that was use to formalise and monitor assertions and interpret the diving situation.
-
-
+Figure~\ref{fig:SimulatorArchitecture} shows the testbench achitecture that was use to formalise and monitor assertions and interpret the diving situation. The testbench is used by starting with the standard used to assess the driving situation, in this case the UKHC. Following this, there is a human-interpreted stage (human icon) that converts human-readable rules into formal assertions (\emph{Assertion Formalisation}) that are machine-readable. This forms one of two inputs to the \emph{Oracle} which uses postgreSQL database technology to perform the automated assertion checking. The second input to the Oracle is the \emph{Data Stream} of extracted features that is observing the driving scenario, which may be from simulation or from live sensor data. The \emph{Feature Extraction} process will capture relevant information from driving scenario, including \emph{Static} elements such as the road network and \emph{Dynamic} elements such as vehicle position and orientation. The \emph{Data Stream} is written to the database at each available time step. All \emph{Oracle} processes happen within the DBMS where \emph{SQL Assertions} are stored which have been written to logically express the formalisations in the SQL language. At each time step the \emph{Assertion Checking} process executes a query engine that evaluates the relevant assertions and generates a pass or a fail verdict as an \emph{Output}.
 
 
 
@@ -179,7 +177,7 @@ Figure~\ref{fig:SimulatorArchitecture} shows the testbench achitecture that was 
  
 % \begin{figure}[h!]
 %     \centering
-%     \includegraphics[width=0.98\linewidth]{../other/figures/RuntimeAssertionsTestBenchArchitecture.jpg}
+%     \includegraphics[width=0.98\linewidth]{\pathToOtherFiles/figures/RuntimeAssertionsTestBenchArchitecture.jpg}
 %     \caption{Operational monitoring architecture}\todo[inline]{Revise to match new version of Fig. 1 almost exactly, i.e. replace AV Control with AV Sensors, replace Simulator with Feature Extraction, remove all above Simulator, leave rest as is. Done. :)}
 %     \label{fig:RuntimeArchitecture}
 % \end{figure}
@@ -210,7 +208,7 @@ Real applications will involve the use of large data sets, so the performance of
 
 \begin{figure*}[h!]
     \centering
-    \includegraphics[width=18cm]{../other/figures/DBMS_deployment.png}
+    \includegraphics[width=18cm]{\pathToOtherFiles/figures/DBMS_deployment.png}
     \caption{Deployment of the PostgreSQL DBMS, showing interactions with the Data Capture and Assertion Checking.}\todo{The DBMS is not the oracle. The Assertions and AC are the oracle together, see prev. figures. Please correct.}
     \label{fig:dbms_deployment}
 \end{figure*}
@@ -232,7 +230,7 @@ Thus, new abstractions can be developed by deriving new data sets from the origi
 
 \begin{figure}[h!]
     \centering
-    \includegraphics[width=8.5cm]{../other/figures/Slide5b.jpg}
+    \includegraphics[width=8.5cm]{\pathToOtherFiles/figures/Slide5b.jpg}
     \caption{Database view of a driving scenario}
     \label{fig:assertion_database_annotated}
 \end{figure}
@@ -286,7 +284,7 @@ In this section we first identify the types of assertions that may exist. We the
 
 \begin{figure}[!hb]
     \centering
-    \includegraphics[width=0.98\linewidth]{../other/figures/Assertion_Categories_Figure.png}
+    \includegraphics[width=0.98\linewidth]{\pathToOtherFiles/figures/Assertion_Categories_Figure.png}
     \caption{Types of assertions}
     \label{fig:categories_of_assertions}
 \end{figure}
@@ -499,7 +497,7 @@ A diagram of the full analysis model, and the derivation of the formula for Safe
 The second waypoint is set at the transition from pull-out to passing the VBP, as shown in Figure \ref{fig:Passing_t1}. The figure shows the expressions for the distance travelled by all vehicles in the \textit{$[t_0, t_1]$} time period (taking into account aspects such as the movement of the AV into the oncoming traffic lane):
  \begin{figure}
     \centering
-    \includegraphics[width=0.98\linewidth]{../other/figures/Passing_t1_v2.png}
+    \includegraphics[width=0.98\linewidth]{\pathToOtherFiles/figures/Passing_t1_v2.png}
     \caption{Scene as the AV begins to pass the VBP, time = $t_1$.}
     \label{fig:Passing_t1}
  \end{figure}
@@ -546,7 +544,7 @@ Further insight to the driving situation can be derived when combining actor sta
 
 \begin{figure}[htp]
     \centering
-    \includegraphics[width=8.5cm]{../other/figures/ERD2.png}
+    \includegraphics[width=8.5cm]{\pathToOtherFiles/figures/ERD2.png}
     \caption{Entity Relationship Diagram for the PostgreSQL database, for cardinality see crow's foot notation (See URL: \url{https://en.wikipedia.org/wiki/Entity-relationship\_model} Accessed: 2021-08-17.)}
     \label{fig:erd}
 \end{figure}
@@ -607,7 +605,7 @@ Specifically, the scenario involves overtaking on a single-lane road where the t
 
 \begin{figure}[htp]
     \centering
-    \includegraphics[width=8.5cm]{../other/figures/carla_challenge_NHTSA_task6_LHS.jpg}
+    \includegraphics[width=8.5cm]{\pathToOtherFiles/figures/carla_challenge_NHTSA_task6_LHS.jpg}
     \caption{Overtaking scenario from NHTSA~\cite{nhtsa_precrash}}
     \label{fig:carla_challenge_NHTSA_task6_LHS}
 \end{figure} 
@@ -624,7 +622,7 @@ The map segment used for the simulation case study is shown in Figure \ref{fig:l
 
 \begin{figure}[htp]
     \centering
-    \includegraphics[width=8.5cm]{../other/figures/Lanelets_anno_av.png}
+    \includegraphics[width=8.5cm]{\pathToOtherFiles/figures/Lanelets_anno_av.png}
     \caption{Lanelets overlaid onto road network.}
     \label{fig:lanelets}
 \end{figure} 
@@ -889,7 +887,7 @@ Performance & significant delay & behaviour\\
 
 \begin{figure}[ht!]
     \centering
-    \includegraphics[width=8.5cm]{../other/figures/SDA_annotated.png}
+    \includegraphics[width=8.5cm]{\pathToOtherFiles/figures/SDA_annotated.png}
     \caption{Simulation results for performance.}
     \label{fig:performance_results}
 \end{figure}
