--- a/document/source/body.tex
+++ b/document/source/body.tex
@@ -72,22 +72,7 @@ In the second mode of use, the principal requirement is that data about the AV, 
 
 
 %\subsection{Document Structure}
-In the following, 
-%
-related work is reviewed in Section~\ref{Related_work}.
-%
-Section~\ref{generic_architecture} explains the structure of the PostgreSQL database and how it integrates with the underlying simulator or runtime monitoring environment. 
-%
-Section~\ref{Use_of_assertions} discusses the  methodology of deriving assertions from the UKHC, and the principles of using  assertions as an oracle both in simulations and for operational analysis. 
-%
-Section~\ref{Experimental_scenario} introduces the overtaking scenario we have used to demonstrate the application of assertion-based oracles and describes two case studies to illustrate the two options, simulation-based testing and operational monitoring. The results from the case studies are presented and analysed. 
-%
-In Section~\ref{discussion} we discuss some important aspects of assertion-based monitoring, which have emerged from the experimental work, in particular the use of assertions for performance monitoring as well as for safety, and the observation that in many assertions the intention of ego-vehicle agents may also need to be monitored 
-% GC ADDED THIS
-to demonstrate compliance with certain driving rules.
-%\todo[inline]{say why} 
-%
-Finally, in Section~\ref{conclusion} we draw conclusions and suggest directions for future work.
+In the following, related work is reviewed in Section~\ref{Related_work}. Section~\ref{generic_architecture} explains the structure of the PostgreSQL database and how it integrates with the underlying simulator or runtime monitoring environment. Section~\ref{Use_of_assertions} discusses the  methodology of deriving assertions from the UKHC, and the principles of using  assertions as an oracle both in simulations and for operational analysis. Section~\ref{Experimental_scenario} introduces the overtaking scenario we have used to demonstrate the application of assertion-based oracles and describes two case studies to illustrate the two options, simulation-based testing and operational monitoring. The results from the case studies are presented and analysed. In Section~\ref{discussion} we discuss some important aspects of assertion-based monitoring, which have emerged from the experimental work, in particular the use of assertions for performance monitoring as well as for safety, and the observation that in many assertions the intention of ego-vehicle agents may also need to be monitored to demonstrate compliance with certain driving rules. Finally, in Section~\ref{conclusion} we draw conclusions and suggest directions for future work.
 
 
 
