GC updated section 3, error in TODO notes

--- a/document/source/assertion.bib
+++ b/document/source/assertion.bib
@@ -34,12 +34,6 @@ title={Convention On Road Traffic},
 year={1968}
 }
 
-@article{decastro,
-  title={Counterexample-guided safety contracts for autonomous driving},
-  author={DeCastro, Jonathan and Liebenwein, Lucas and Vasile, Cristian-Ioan and Tedrake, Russell L and Karaman, Sertac and Rus, Daniela L},
-  year={2018}
-}
-
 @article{sinha,
   title={A Crash Injury Model Involving Autonomous Vehicle: Investigating of Crash and Disengagement Reports},
   author={Sinha, Amolika and Vu, Vincent and Chand, Sai and Wijayaratna, Kasun and Dixit, Vinayak},
@@ -236,10 +230,13 @@ year={1968}
   publisher={Elsevier}
 }
 
-@article{decastro2018counterexample,
+@inproceedings{decastro2018counterexample,
   title={Counterexample-guided safety contracts for autonomous driving},
-  author={DeCastro, Jonathan and Liebenwein, Lucas and Vasile, Cristian-Ioan and Tedrake, Russell L and Karaman, Sertac and Rus, Daniela L},
-  year={2018}
+  author={DeCastro, Jonathan and Liebenwein, Lucas and Vasile, Cristian-Ioan and Tedrake, Russ and Karaman, Sertac and Rus, Daniela},
+  booktitle={International Workshop on the Algorithmic Foundations of Robotics},
+  pages={939--955},
+  year={2018},
+  organization={Springer}
 }
 
 @article{Chen2015,
