GC updated section 3, error in TODO notes

--- a/document/ieee_trans/asr_ieeetrans.tex
+++ b/document/ieee_trans/asr_ieeetrans.tex
@@ -16,12 +16,12 @@
 \usepackage{dblfloatfix}
 \usepackage{booktabs}
 \usepackage{authblk}
-% \newcommand{\TODO}[1]{{\color{red}\textbf{TODO: #1}}}
+\newcommand{\TODO}[1]{{\color{red}\textbf{TODO: #1}}}
 \usepackage[disable]{todonotes}
 % \pagenumbering{gobble} %suppresses page numbers
 \usepackage{balance} %balance columns
 \usepackage{todonotes} 
-\usepackage[disable]{todonotes}
+% \usepackage[disable]{todonotes}
 \usepackage{siunitx}
 % \usepackage{draftwatermark}
 \usepackage{flushend}
@@ -105,7 +105,8 @@ Verification and Validation (V\&V), Autonomous Driving, Autonomous Vehicles, Sim
 %  Bio
 % ***************************************************
 \begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{../other/mugs/chris.jpg}}]{Chris Harper}
-is a Research Fellow in Robotics Safety \& Control at Bristol Robotics Laboratory, researching methods and technologies for safety assurance of autonomous systems, machine learning and AI. For over 20 years Dr Harper has worked in both industry and academia as a safety assurance specialist with experience in system/software hazard and safety analysis, safety cases and safety management, and has also been involved in development of international industry safety standards for robotics. His research interests include assurance methods, high integrity design, safety validation, and safety arguments/cases of autonomous systems. He has recently been working on the CCAV-funded R\&D projects ROBOPILOT (autonomous parcel delivery), CAV Forth (autonomous bus service) and SafeMRX (requirements for CAV minimum risk manoeuvres) and on a project for the Assuring Autonomy International Programme (AAIP) on assistive robotics in healthcare. 
+is a Research Fellow in Robotics Safety \& Control at Bristol Robotics Laboratory, researching methods and technologies for safety assurance of autonomous systems, machine learning and AI. For over 20 years Dr Harper has worked in both industry and academia as a safety assurance specialist with experience in system/software hazard and safety analysis, safety cases and safety management, and has also been involved in development of international industry safety standards for robotics. His research interests include assurance methods, high integrity design, safety validation, and safety arguments/cases of autonomous systems. 
+%He has recently been working on the CCAV-funded R\&D projects ROBOPILOT (autonomous parcel delivery), CAV Forth (autonomous bus service) and SafeMRX (requirements for CAV minimum risk manoeuvres) and on a project for the Assuring Autonomy International Programme (AAIP) on assistive robotics in healthcare. 
 \end{IEEEbiography}
 \vskip -2\baselineskip plus -1fil  
 \begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{../other/mugs/greg.png}}]{Greg Chance}
@@ -127,7 +128,7 @@ received a B. Tech  in engineering physics from the Indian Institute of Technolo
 \begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{../other/mugs/tony}}]{Tony Pipe} 
 received his BSc (Hons.) degree in Electronic Engineering from Warwick in 1979 and, after an eight-year period in industry that included running a small company, received his PhD in Robotics from the University of the West of England (UWE) in 1997. Since 2010 he has been a Professor of Robotics and Autonomous Systems at UWE. He was a founding member of the Bristol Robotics Laboratory (BRL), and acted as one of its two Deputy Directors from its inception in 2006 until 2020. His research interests focus on safe and correct operation whilst in close-proximity to human beings. He has co-authored over 200 international refereed publications, supervised 35 PhDs, and created a BRL income of \pounds10M since 2013. 
 %He has acted as BRL-UWE PI on the EPSRC grant ‘Trustworthy Robotic Assistants’, the Programme/Hub grants ‘Robotics for Nuclear Environments’ and ‘National Centre for Nuclear Robotics’, and the Centre for Doctoral Training in Robotics and Autonomous Systems. 
-Prof.\ Pipe has been involved with Connected Autonomous Vehicle research and development since 2015 via the Innovate UK/CCAV funded projects VENTURER, FLOURISH, MultiCAV, CAPRI, ROBOPILOT and CAV-Forth.
+%Prof.\ Pipe has been involved with Connected Autonomous Vehicle research and development since 2015 via the Innovate UK/CCAV funded projects VENTURER, FLOURISH, MultiCAV, CAPRI, ROBOPILOT and CAV-Forth.
 \end{IEEEbiography}
 \vskip -2\baselineskip plus -1fil  
 \begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{../other/mugs/kie}}]{{Kerstin Eder}} 
@@ -153,7 +154,7 @@ Figure \ref{fig:overtaking_analysis_diag} presents a model of an overtaking mano
 \begin{figure*}[h]
     \centering
     \includegraphics[width=14cm]{\pathToOtherFiles/figures/Overtaking_Manoeuvre_Analysis_global_view_v2.png}
-    \caption{Schematic of Model-based Analysis of Overtaking Manoeuvre.}
+    \caption{Schematic of model-based analysis of overtaking manoeuvre.}
     \label{fig:overtaking_analysis_diag}
 \end{figure*}
 
