todo notes at top of body

--- a/document/ieee_trans/asr_ieeetrans.tex
+++ b/document/ieee_trans/asr_ieeetrans.tex
@@ -21,7 +21,7 @@
 % \pagenumbering{gobble} %suppresses page numbers
 \usepackage{balance} %balance columns
 \usepackage{todonotes} 
-\usepackage[disable]{todonotes}
+% \usepackage[disable]{todonotes}
 \usepackage{siunitx}
 % \usepackage{draftwatermark}
 \usepackage{flushend}
