--- a/document/source/body.tex
+++ b/document/source/body.tex
@@ -1,3 +1,10 @@
+% Actions still to do:
+% ref required line 54
+% use the term oracle consistently, prefer assertion-based oracle
+% add a link to source figures in git, provide zip of files
+% condense section 5
+
+
 \section{Introduction}
 
 Verification and validation are important to earning trust and gaining confidence in the safety of autonomous systems (AS) such as autonomous vehicles (AVs). Safety validation of any system can (and should) be performed by a variety of measures, including analysis and inspection of designs and their implementation. In this paper we focus on validation by system testing, and in particular on using assertions within simulation and at runtime for a vehicle overtaking scenario. 
